# chip-e

./: .gitignore  Cargo.toml  LICENSE  README.md  imgui.ini
.github/workflows/: rust.yml
src/: chip8.rs  emulator.rs  log.rs  main.rs
src/chip8/: instructions.rs  mod.rs
