[package]
name = "chip-e"
version = "0.1.0"
authors = ["Ben Tracy"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"
imgui = "0.7.0"
imgui-glium-renderer = "0.7.0"
imgui-winit-support = "0.7.0"
glium = "0.29.1"
winit = "0.24.0"
nfd2 = "0.3.0"